<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_text">按钮</string>
    <string name="detail">支持功能：\n 1、上下左右控制焦点\n 2、Gallery画廊模式层叠效果\n 3、图片循环滚动\n
        4、图片自动滚动（聚焦时手动控制，失焦时自动滚动）</string>
    <string name="crop">Crop</string>
    <string name="s_mylistview_btn">简单的listview</string>
    <string name="s_simpleCursorAdapter_btn">simpleCursorAdapter</string>
    <string name="s_simpleAdapter_btn">simpleAdapter</string>
    <string name="s_myAdapter_btn">myAdapter</string>
    <string name="s_view_btn">more</string>

</resources>