<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_mylistview_btn" />

    <Button
        android:id="@+id/list1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_simpleCursorAdapter_btn" />

    <Button
        android:id="@+id/list2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_simpleAdapter_btn" />

    <Button
        android:id="@+id/list3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_myAdapter_btn" />

    <Button
        android:id="@+id/list4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_myAdapter_btn" />

    <Button
        android:id="@+id/list5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_myAdapter_btn" />

</LinearLayout>